--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.instagramclone">
 
+    <uses-permission
+        android:name="android.permission.INTERNET">
+    </uses-permission>
+
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE">
+    </uses-permission>
+
+    <uses-permission-sdk-23
+        android:name="android.permission.INTERNET">
+    </uses-permission-sdk-23>
+
+    <uses-permission-sdk-23
+        android:name="android.permission.READ_EXTERNAL_STORAGE">
+    </uses-permission-sdk-23>
+
     <application
         android:name=".ParseServer"
         android:allowBackup="true"
