--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,8 @@ dependencies {
 
     //google design library
     implementation 'com.google.android.material:material:1.0.0'
+
+    //pretty dialog library
+
+    implementation 'com.github.mjn1369:prettydialog:1.0.4'
 }
