--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.instagramclone">
 
-    <uses-permission
-        android:name="android.permission.INTERNET">
-    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
 
-    <uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE">
-    </uses-permission>
-
-    <uses-permission-sdk-23
-        android:name="android.permission.INTERNET">
-    </uses-permission-sdk-23>
-
-    <uses-permission-sdk-23
-        android:name="android.permission.READ_EXTERNAL_STORAGE">
-    </uses-permission-sdk-23>
+    <uses-permission-sdk-23 android:name="android.permission.INTERNET"></uses-permission-sdk-23>
+    <uses-permission-sdk-23 android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission-sdk-23>
 
     <application
         android:name=".ParseServer"
@@ -26,9 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SocialMediaActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+        <activity android:name=".UsersPostActivity"></activity>
+        <activity android:name=".SocialMediaActivity"></activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".SignUpActivity">
             <intent-filter>
